# gwcs

./: .bandit.yaml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  README.rst  conftest.py  convert_schemas.py  ez_setup.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  changelog.yml  ci.yml  contexts.yml  downstream.yml  dummy.yml  get_webbpsf.yml  publish-to-pypi.yml  romanisim_data.yml  webbpsf_data.yml
changes/: 677.feature.rst  684.bugfix.rst  687.bugfix.rst  692.breaking.rst  693.breaking.rst  695.feature.rst  696.feature.rst  701.bugfix.rst  706.bugfix.rst  709.bugfix.rst  714.misc.rst  721.feature.rst  722.feature.rst  724.feature.rst  744.bugfix.rst  745.feature.1.rst  745.feature.rst
docs/: changes.rst  conf.py  index.rst  rtd-pip-requirements  rtd_environment.yaml
docs/gwcs/: CHANGES.rst  api.rst  constructing_gwcs_models.rst  create_wcs.rst  developer_introduction.rst  fits_analog.rst  guides.rst  ifu.rst  imaging_with_distortion.rst  legacy_api.rst  legacy_vs_shared.rst  native_api.rst  native_vs_shared.rst  overview.rst  points_to_wcs.rst  pure_asdf.rst  selector_model.rst  tutorials.rst  user_introduction.rst  using_wcs.rst  wcs_ape.rst  wcs_examples.asdf  wcs_validation.rst  wcstools.rst
docs/gwcs/schemas/: celestial_frame-1.0.0.rst  composite_frame-1.0.0.rst  composite_frame-1.0.0.yaml  fitswcs-1.0.0.rst  fitswcs-1.0.0.yaml  frame-1.0.0.rst  frame2d-1.0.0.rst  index.rst  label_mapper-1.0.0.rst  regions_selector-1.0.0.rst  spectral_frame-1.0.0.rst  step-1.0.0.rst  temporal_frame-1.0.0.rst  wcs-1.0.0.rst
docs/gwcs/static_example_files/: xy_sky_coords.csv
docs/sphinxext/: category.py
gwcs/: __init__.py  _typing.py  api.py  conftest.py  coordinate_frames.py  examples.py  extension.py  fitswcs.py  geometry.py  gwcs_types.py  legacy_wcs.py  lookup_table.py  models.py  region.py  representation.py  selector.py  spectral_builtin_frames.py  spectroscopy.py  util.py  utils.py  wcs.py  wcstools.py
gwcs/converters/: geometry.py  selector.py  spectroscopy.py  wcs.py
gwcs/converters/tests/: test_selector.py  test_transforms.py  test_wcs.py
gwcs/coordinate_frames/: __init__.py  _axis.py  _base.py  _celestial.py  _composite.py  _coordinate_frames.py  _core.py  _discrete.py  _empty.py  _frame.py  _properties.py  _spectral.py  _stokes.py  _temporal.py  _utils.py
gwcs/schemas/: celestial_frame-1.2.0.yaml  composite_frame-1.2.0.yaml  frame-1.2.0.yaml  label_mapper-1.0.0.yaml  label_mapper-1.1.0.yaml  regions_selector-1.0.0.yaml  regions_selector-1.1.0.yaml  spectral_frame-1.2.0.yaml  step-1.0.0.yaml  step-1.2.0.yaml  wcs-1.0.0.yaml  wcs-1.2.0.yaml
gwcs/schemas/stsci.edu/gwcs/: celestial_frame-1.0.0.yaml  direction_cosines-1.0.0.yaml  direction_cosines-1.1.0.yaml  frame-1.0.0.yaml  frame-1.1.0.yaml  frame2d-1.0.0.yaml  grating_equation-1.0.0.yaml  grating_equation-1.1.0.yaml  label_mapper-1.0.0.yaml  label_mapper-1.1.0.yaml  lookuptable-1.0.0.yaml  regions_selector-1.0.0.yaml  regions_selector-1.1.0.yaml  sellmeier_glass-1.0.0.yaml  sellmeier_glass-1.1.0.yaml  sellmeier_zemax-1.0.0.yaml  sellmeier_zemax-1.1.0.yaml  snell3d-1.0.0.yaml  snell3d-1.1.0.yaml  spectral_frame-1.0.0.yaml  spherical_cartesian-1.0.0.yaml  spherical_cartesian-1.1.0.yaml  step-1.1.0.yaml  stokes_frame-1.0.0.yaml  temporal_frame-1.0.0.yaml  wcs-1.0.0.yaml  wcs-1.1.0.yaml
gwcs/tags/: __init__.py  geometry_models.py  lookuptable.py  selector.py  selectortags.py  spectroscopy_models.py  transforms.py  wcs.py
gwcs/tags/tests/: test_selector.py  test_spectroscopy.py  test_transforms.py  test_wcs.py
gwcs/tests/: conftest.py  coveragerc  setup_package.py  test_api.py  test_api_consistent.py  test_api_slicing.py  test_bounding_box.py  test_coordinate_systems.py  test_extension.py  test_geometry.py  test_lookuptable.py  test_models.py  test_region.py  test_separable.py  test_spectroscopy_models.py  test_utils.py  test_wcs.py  utils.py
gwcs/tests/data/: acs.hdr  acs_wfc.hdr  miri_lrs_wcs.asdf  miriwcs.asdf  nircamwcs.asdf  simple_wcs2.hdr  stokes.txt
gwcs/wcs/: __init__.py  _exception.py  _fixed_point.py  _pipeline.py  _step.py  _utils.py  _wcs.py
licenses/: LICENSE.rst
