[project]
name = "gwcs"
description = "Generalized World Coordinate System"
requires-python = ">=3.11"
authors = [{ name = "gwcs developers" }]
dependencies = [
  "asdf >= 3.3.0",
  "astropy >= 6.0",
  "numpy>=1.25",
  "scipy>=1.14.1",
  "asdf_wcs_schemas >= 0.5.0",
  "asdf-astropy >= 0.8.0",
]
license-files = ["licenses/LICENSE.rst"]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/spacetelescope/gwcs"
Tracker = "https://github.com/spacetelescope/gwcs/issues"
Documentation = "https://gwcs.readthedocs.io/en/stable/"
"Source Code" = "https://github.com/spacetelescope/gwcs"

[project.entry-points."asdf.extensions"]
gwcs = "gwcs.extension:get_extensions"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sphinx-astropy",
  "sphinx-copybutton",
  "sphinx-asdf",
  "furo",
  "sphinx-inline-tabs",
  "matplotlib",
]
test = ["ci-watson>=0.3.0", "pytest>=9.0", "pytest-astropy>=0.11.0"]

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"gwcs.tests.data" = ["*"]
"docs.gwcs" = ["*.asdf"]

[tool.setuptools.packages.find]
namespaces = false

[tool.build_sphinx]
source-dir = "docs"
build-dir = "docs/_build"
all_files = "1"

[tool.distutils.upload_docs]
upload-dir = "docs/_build/html"
show-response = 1

[tool.pytest]
minversion = "9.0"
doctest_plus = "enabled"
doctest_rst = "enabled"
text_file_format = "rst"
log_cli_level = "INFO"
xfail_strict = true
testpaths = ["gwcs", "docs"]
addopts = [
  "-ra",
  "--color=yes",
  "--doctest-rst",
  "--strict-config",
  "--strict-markers",
  "-p no:legacypath",
]
norecursedirs = ["build", "docs/_build", ".tox"]
filterwarnings = [
  "error",
  "ignore:Models in math_functions:astropy.utils.exceptions.AstropyUserWarning",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.coverage.run]
omit = [
  "gwcs/tests/test_*",
  "gwcs/tags/tests/test_*",
  "*/gwcs/tests/test_*",
  "*/gwcs/tags/tests/test_*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "except ImportError",
  "raise AssertionError",
  "raise NotImplementedError",
  "def main\\(.*\\):",
  "pragma: py{ignore_python_version}",
]

[tool.setuptools_scm]
version_file = "gwcs/_version.py"
local_scheme = "dirty-tag"

[tool.ruff.lint]
select = [
  # "AIR",   # Airflow
  "ERA", # eradicate (remove commented out code)
  # "FAST",  # FastAPI
  "YTT", # flake8-2020 (system version info)
  # "ANN",   # flake8-annotations
  # "ASYNC", # flake8-async
  "S",   # flake8-bandit (security checks)
  "BLE", # flake8-blind-except (prevent blind except statements)
  # "FBT",   # flake8-boolean-trap
  "B", # flake8-bugbear (prevent common gotcha bugs)
  "A", # flake8-builtins (prevent shadowing of builtins)
  # "COM",   # flake8-commas
  "C4", # flake8-comprehensions (best practices for comprehensions)
  # "CPY",   # flake8-copyright
  # "DTZ",   # flake8-datetimez
  "T10", # flake8-debugger (prevent debugger statements in code)
  # "DJ",    # flake8-django
  "EM", # flake8-errormessages (best practices for error messages)
  # "EXE",   # flake8-executable
  # "FIX",   # flake8-fixme
  # "FA",    # flake8-future-annotations
  "INT", # flake8-gettext (when to use printf style strings)
  "ISC", # flake8-implicit-str-concat (prevent implicit string concat)
  "ICN", # flake8-import-conventions (enforce import conventions)
  # "LOG",   # flake8-logging
  # "G",     # flake8-logging-format
  "INP", # flake8-no-pep420 (prevent use of PEP420, i.e. implicit name spaces)
  "PIE", # flake8-pie (misc suggested improvement linting)
  "T20", # flake8-print (prevent print statements in code)
  # "PYI",   # flake8-pyi
  "PT",  # flake8-pytest-style (best practices for pytest)
  "Q",   # flake8-quotes (best practices for quotes)
  "RSE", # flake8-raise (best practices for raising exceptions)
  "RET", # flake8-return (best practices for return statements)
  "SLF", # flake8-self
  "SIM", # flake8-simplify (suggest simplifications to code where possible)
  # "SLOT",  # flake8-slots
  "TID", # flake8-tidy-imports (prevent banned api and best import practices)
  # "TD",    # flake8-todos
  # "TC",    # flake8-type-checking
  # "ARG",   # flake8-unused-arguments
  "PTH", # flake8-use-pathlib (prefer pathlib over os.path)
  "FLY", # flynt (f-string conversion where possible)
  "I",   # isort (import sorting)
  # "C90",   # mccabe
  "NPY", # NumPy-specific checks (recommendations from NumPy)
  # "PD",    # pandas-vet
  # "N",     # pep8-naming
  "PERF", # Perflint (performance linting)
  "E",    # pycodestyle (part of default flake8)
  "W",    # pycodestyle (part of default flake8)
  # "DOC",   # pydoclint
  # "D",     # pydocstyle
  "F",   # Pyflakes (part of default flake8)
  "PGH", # pygrep (simple grep checks)
  "PL",  # pylint (general linting, flake8 alternative)
  "UP",  # pyupgrade (upgrade code to modern python)
  # "FURB",  # refurb
  "RUF", # ruff specific checks
  "TRY", # tryceratops (linting for try/except blocks)
]
ignore = [
  "ISC001",  # conflicts with formatter at times
  "PLR2004", # magic values (this should be dealt with at some point)
  "PLR0912", # Too many branches in function
  "PLR0913", # Too many arguments in function
  "PLR0915", # Too many statements in function
  "PLC0415", # import outside toplevel, this creates issues with circular and delayed imports
  "RUF059",  # Unpacked variable is never used
  "B028",    # No explicit stacklevel found
  "RUF043",  # pytest-raises-ambiguous-pattern
]

[tool.ruff.lint.extend-per-file-ignores]
"gwcs/tests/*" = ["S101", "SLF001"]
"gwcs/converters/tests/*" = ["S101", "SLF001"]
"docs/conf.py" = ["INP001", "ERA001"]
"convert_schemas.py" = ["PTH"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disable_error_code = "import-untyped" # do not check imports
python_version = "3.11"

# Always ignore tests and docs
[[tool.mypy.overrides]]
module = ["gwcs.tests.*", "docs.*"]
ignore_errors = true

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes"
package = "gwcs"
title_format = "{version} ({project_date})"
ignore = [".gitkeep"]
wrap = true
issue_format = "`#{issue} <https://github.com/spacetelescope/gwcs/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "New Features"

[tool.towncrier.fragment.breaking]
name = "Breaking Changes"

[tool.towncrier.fragment.bugfix]
name = "Bug Fixes"

[tool.towncrier.fragment.doc]
name = "Documentation"

[tool.towncrier.fragment.misc]
