[metadata]
name = gwcs
description = Generalized World Coordinate System
long_description = Tools for managing the WCS of astronomical observations in a general (non-FITS) way
author = gwcs developers
author_email = help@stsci.edu
license = BSD
url = https://gwcs.readthedocs.io/en/latest/
edit_on_github = False
github_project = spacetelescope/gwcs

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.6
testpaths = gwcs docs
norecursedirs = build docs/_build
doctest_plus = enabled
asdf_schema_tests_enabled = true
asdf_schema_root = gwcs/schemas
addopts = --doctest-rst
filterwarnings =
    ignore:Models in math_functions:astropy.utils.exceptions.AstropyUserWarning

[flake8]
# E265: # has no space after
# E501: line too long
# F403: unable to detect undefined names
# F405: may be defined from * imports
ignore = E265,E501,F403,F405
select = F,E101,E111,E112,E113,E401,E402,E711,E722,E30
max-line-length=110
exclude = conftest.py, schemas, tags, .git, __pycache__, docs, build, dist, .tox, .eggs
