[metadata]
name = gwcs
description = Generalized World Coordinate System
long_description = Tools for managing the WCS of astronomical observations in a general (non-FITS) way
author = gwcs developers
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/gwcs
project_urls =
    Tracker = https://github.com/spacetelescope/gwcs/issues
    Documentation = https://gwcs.readthedocs.io/en/stable/
    Source Code = https://github.com/spacetelescope/jwst
edit_on_github = False

[options]
zip_safe = False
python_requires = >=3.6
setup_requires =
    setuptools_scm

install_requires =
    asdf >= 2.8.1
    astropy >= 4.1
    numpy
    scipy
    asdf_wcs_schemas
    asdf-astropy

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme
    sphinx-astropy
    sphinx-asdf

test =
    ci-watson>=0.3.0
    pytest>=4.6.0
    pytest-astropy
    codecov

[options.entry_points]
asdf.extensions =
  gwcs = gwcs.extension:get_extensions


[flake8]
select = F, W, E101, E111, E112, E113, E401, E402, E501, E711, E722
max-line-length = 110
exclude = conftest.py, schemas, tags, .git, __pycache__, docs, build, dist, .tox, .eggs
# E265: # has no space after
# E501: line too long
# F403: unable to detect undefined names
# F405: may be defined from * imports
ignore = E265,E501,F403,F405,W503,W504

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 4.6
norecursedirs = build docs/_build .tox
doctest_plus = enabled
addopts = --doctest-rst
filterwarnings =
    ignore:Models in math_functions:astropy.utils.exceptions.AstropyUserWarning

[coverage:run]
omit =
    gwcs/tests/test_*
    gwcs/tags/tests/test_*
    # And list these again for running against installed version
    */gwcs/tests/test_*
    */gwcs/tags/tests/test_*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about packages we have installed
    except ImportError

    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError

    # Don't complain about script hooks
    def main\(.*\):

    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
